// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary correctly with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $1.95
  </p>
</div>
`;

exports[`Should render ExpensesSummary correctly with many expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling 
    $1,141.95
  </p>
</div>
`;
